gen/CompiwaveParser.java
// Generated from /home/luism/PycharmProjects/COMPIWAVE/Compiwave.g4 by ANTLR 4.6
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CompiwaveParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, PUSH=21, POP=22, ASSIGN=23, ADD=24, MINUS=25, 
		MULT=26, DIV=27, EQUALS=28, NOTEQUAL=29, LT=30, GT=31, LEQUAL=32, GEQUAL=33, 
		AND=34, OR=35, T_FLOAT=36, T_INT=37, T_BOOL=38, T_STRING=39, ID=40, BOOLEAN=41, 
		INT=42, FLOAT=43, STRING=44, WS=45, SL_COMMENT=46;
	public static final int
		RULE_compiwave = 0, RULE_var_declaration = 1, RULE_list_declaration = 2, 
		RULE_function_declaration = 3, RULE_function_params = 4, RULE_function_param = 5, 
		RULE_cwtype = 6, RULE_list_assignment = 7, RULE_list_push = 8, RULE_list_pop = 9, 
		RULE_var_assignment = 10, RULE_block = 11, RULE_main_function = 12, RULE_statement = 13, 
		RULE_function_statement = 14, RULE_arguments = 15, RULE_if_statement = 16, 
		RULE_else_statement = 17, RULE_while_statement = 18, RULE_do_while_statement = 19, 
		RULE_if_expr = 20, RULE_do_if_expr = 21, RULE_return_statement = 22, RULE_print_statement = 23, 
		RULE_expr = 24;
	public static final String[] ruleNames = {
		"compiwave", "var_declaration", "list_declaration", "function_declaration", 
		"function_params", "function_param", "cwtype", "list_assignment", "list_push", 
		"list_pop", "var_assignment", "block", "main_function", "statement", "function_statement", 
		"arguments", "if_statement", "else_statement", "while_statement", "do_while_statement", 
		"if_expr", "do_if_expr", "return_statement", "print_statement", "expr"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'begin'", "'end'", "';'", "'list'", "'('", "')'", "'function'", 
		"'void'", "','", "'['", "']'", "'{'", "'}'", "'main'", "'if'", "'else'", 
		"'while'", "'do'", "'return'", "'print'", "'<<'", "'>>'", "'='", "'+'", 
		"'-'", "'*'", "'/'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'&&'", 
		"'||'", "'float'", "'int'", "'boolean'", "'string'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "PUSH", "POP", "ASSIGN", 
		"ADD", "MINUS", "MULT", "DIV", "EQUALS", "NOTEQUAL", "LT", "GT", "LEQUAL", 
		"GEQUAL", "AND", "OR", "T_FLOAT", "T_INT", "T_BOOL", "T_STRING", "ID", 
		"BOOLEAN", "INT", "FLOAT", "STRING", "WS", "SL_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Compiwave.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CompiwaveParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CompiwaveContext extends ParserRuleContext {
		public Main_functionContext main_function() {
			return getRuleContext(Main_functionContext.class,0);
		}
		public List<Var_declarationContext> var_declaration() {
			return getRuleContexts(Var_declarationContext.class);
		}
		public Var_declarationContext var_declaration(int i) {
			return getRuleContext(Var_declarationContext.class,i);
		}
		public List<List_declarationContext> list_declaration() {
			return getRuleContexts(List_declarationContext.class);
		}
		public List_declarationContext list_declaration(int i) {
			return getRuleContext(List_declarationContext.class,i);
		}
		public List<Function_declarationContext> function_declaration() {
			return getRuleContexts(Function_declarationContext.class);
		}
		public Function_declarationContext function_declaration(int i) {
			return getRuleContext(Function_declarationContext.class,i);
		}
		public CompiwaveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compiwave; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).enterCompiwave(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).exitCompiwave(this);
		}
	}

	public final CompiwaveContext compiwave() throws RecognitionException {
		CompiwaveContext _localctx = new CompiwaveContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compiwave);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(T__0);
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__6) | (1L << T_FLOAT) | (1L << T_INT) | (1L << T_BOOL) | (1L << T_STRING))) != 0)) {
				{
				setState(54);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T_FLOAT:
				case T_INT:
				case T_BOOL:
				case T_STRING:
					{
					setState(51);
					var_declaration();
					}
					break;
				case T__3:
					{
					setState(52);
					list_declaration();
					}
					break;
				case T__6:
					{
					setState(53);
					function_declaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(59);
			main_function();
			setState(60);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declarationContext extends ParserRuleContext {
		public CwtypeContext cwtype() {
			return getRuleContext(CwtypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(CompiwaveParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(CompiwaveParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Var_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).enterVar_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).exitVar_declaration(this);
		}
	}

	public final Var_declarationContext var_declaration() throws RecognitionException {
		Var_declarationContext _localctx = new Var_declarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_var_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			cwtype();
			setState(63);
			match(ID);
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(64);
				match(ASSIGN);
				setState(65);
				expr(0);
				}
			}

			setState(68);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_declarationContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(CompiwaveParser.ID, 0); }
		public CwtypeContext cwtype() {
			return getRuleContext(CwtypeContext.class,0);
		}
		public List_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).enterList_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).exitList_declaration(this);
		}
	}

	public final List_declarationContext list_declaration() throws RecognitionException {
		List_declarationContext _localctx = new List_declarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_list_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(T__3);
			setState(71);
			match(ID);
			setState(72);
			match(T__4);
			setState(73);
			cwtype();
			setState(74);
			match(T__5);
			setState(75);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_declarationContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(CompiwaveParser.ID, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public CwtypeContext cwtype() {
			return getRuleContext(CwtypeContext.class,0);
		}
		public Function_paramsContext function_params() {
			return getRuleContext(Function_paramsContext.class,0);
		}
		public Function_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).enterFunction_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).exitFunction_declaration(this);
		}
	}

	public final Function_declarationContext function_declaration() throws RecognitionException {
		Function_declarationContext _localctx = new Function_declarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_function_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(T__6);
			setState(80);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T_FLOAT:
			case T_INT:
			case T_BOOL:
			case T_STRING:
				{
				setState(78);
				cwtype();
				}
				break;
			case T__7:
				{
				setState(79);
				match(T__7);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(82);
			match(ID);
			setState(83);
			match(T__4);
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T_FLOAT) | (1L << T_INT) | (1L << T_BOOL) | (1L << T_STRING))) != 0)) {
				{
				setState(84);
				function_params();
				}
			}

			setState(87);
			match(T__5);
			setState(88);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_paramsContext extends ParserRuleContext {
		public Function_paramContext function_param;
		public List<Function_paramContext> numberOfParams = new ArrayList<Function_paramContext>();
		public List<Function_paramContext> function_param() {
			return getRuleContexts(Function_paramContext.class);
		}
		public Function_paramContext function_param(int i) {
			return getRuleContext(Function_paramContext.class,i);
		}
		public Function_paramsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).enterFunction_params(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).exitFunction_params(this);
		}
	}

	public final Function_paramsContext function_params() throws RecognitionException {
		Function_paramsContext _localctx = new Function_paramsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_function_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			((Function_paramsContext)_localctx).function_param = function_param();
			((Function_paramsContext)_localctx).numberOfParams.add(((Function_paramsContext)_localctx).function_param);
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(91);
				match(T__8);
				setState(92);
				((Function_paramsContext)_localctx).function_param = function_param();
				((Function_paramsContext)_localctx).numberOfParams.add(((Function_paramsContext)_localctx).function_param);
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Function_paramContext extends ParserRuleContext {
		public CwtypeContext cwtype() {
			return getRuleContext(CwtypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(CompiwaveParser.ID, 0); }
		public Function_paramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).enterFunction_param(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).exitFunction_param(this);
		}
	}

	public final Function_paramContext function_param() throws RecognitionException {
		Function_paramContext _localctx = new Function_paramContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_function_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			cwtype();
			setState(99);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CwtypeContext extends ParserRuleContext {
		public TerminalNode T_FLOAT() { return getToken(CompiwaveParser.T_FLOAT, 0); }
		public TerminalNode T_INT() { return getToken(CompiwaveParser.T_INT, 0); }
		public TerminalNode T_BOOL() { return getToken(CompiwaveParser.T_BOOL, 0); }
		public TerminalNode T_STRING() { return getToken(CompiwaveParser.T_STRING, 0); }
		public CwtypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cwtype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).enterCwtype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).exitCwtype(this);
		}
	}

	public final CwtypeContext cwtype() throws RecognitionException {
		CwtypeContext _localctx = new CwtypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cwtype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T_FLOAT) | (1L << T_INT) | (1L << T_BOOL) | (1L << T_STRING))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_assignmentContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(CompiwaveParser.ID, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode ASSIGN() { return getToken(CompiwaveParser.ASSIGN, 0); }
		public List_assignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).enterList_assignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).exitList_assignment(this);
		}
	}

	public final List_assignmentContext list_assignment() throws RecognitionException {
		List_assignmentContext _localctx = new List_assignmentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_list_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(ID);
			setState(104);
			match(T__9);
			setState(105);
			expr(0);
			setState(106);
			match(T__10);
			setState(107);
			match(ASSIGN);
			setState(108);
			expr(0);
			setState(109);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_pushContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(CompiwaveParser.ID, 0); }
		public TerminalNode PUSH() { return getToken(CompiwaveParser.PUSH, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List_pushContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_push; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).enterList_push(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).exitList_push(this);
		}
	}

	public final List_pushContext list_push() throws RecognitionException {
		List_pushContext _localctx = new List_pushContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_list_push);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(ID);
			setState(112);
			match(PUSH);
			setState(113);
			expr(0);
			setState(114);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_popContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(CompiwaveParser.ID, 0); }
		public TerminalNode POP() { return getToken(CompiwaveParser.POP, 0); }
		public List_popContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_pop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).enterList_pop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).exitList_pop(this);
		}
	}

	public final List_popContext list_pop() throws RecognitionException {
		List_popContext _localctx = new List_popContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_list_pop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(ID);
			setState(117);
			match(POP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_assignmentContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(CompiwaveParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CompiwaveParser.ID, i);
		}
		public List<TerminalNode> ASSIGN() { return getTokens(CompiwaveParser.ASSIGN); }
		public TerminalNode ASSIGN(int i) {
			return getToken(CompiwaveParser.ASSIGN, i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Var_assignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).enterVar_assignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).exitVar_assignment(this);
		}
	}

	public final Var_assignmentContext var_assignment() throws RecognitionException {
		Var_assignmentContext _localctx = new Var_assignmentContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_var_assignment);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(ID);
			setState(120);
			match(ASSIGN);
			setState(125);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(121);
					match(ID);
					setState(122);
					match(ASSIGN);
					}
					} 
				}
				setState(127);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(128);
			expr(0);
			setState(129);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(T__11);
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__11) | (1L << T__14) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T_FLOAT) | (1L << T_INT) | (1L << T_BOOL) | (1L << T_STRING) | (1L << ID))) != 0)) {
				{
				{
				setState(132);
				statement();
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(138);
			match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Main_functionContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public Main_functionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).enterMain_function(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).exitMain_function(this);
		}
	}

	public final Main_functionContext main_function() throws RecognitionException {
		Main_functionContext _localctx = new Main_functionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_main_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(T__13);
			setState(141);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public Var_declarationContext var_declaration() {
			return getRuleContext(Var_declarationContext.class,0);
		}
		public List_declarationContext list_declaration() {
			return getRuleContext(List_declarationContext.class,0);
		}
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public While_statementContext while_statement() {
			return getRuleContext(While_statementContext.class,0);
		}
		public Do_while_statementContext do_while_statement() {
			return getRuleContext(Do_while_statementContext.class,0);
		}
		public Return_statementContext return_statement() {
			return getRuleContext(Return_statementContext.class,0);
		}
		public Print_statementContext print_statement() {
			return getRuleContext(Print_statementContext.class,0);
		}
		public Var_assignmentContext var_assignment() {
			return getRuleContext(Var_assignmentContext.class,0);
		}
		public List_assignmentContext list_assignment() {
			return getRuleContext(List_assignmentContext.class,0);
		}
		public List_pushContext list_push() {
			return getRuleContext(List_pushContext.class,0);
		}
		public List_popContext list_pop() {
			return getRuleContext(List_popContext.class,0);
		}
		public Function_statementContext function_statement() {
			return getRuleContext(Function_statementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CompiwaveListener ) ((CompiwaveListener)listener).exitStatement(this);
		}
	}
